// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consent Banner Container should correctly render amp banner 1`] = `
<div>
  <div>
    Amp Cookie banner
  </div>
</div>
`;

exports[`Consent Banner Container should correctly render canonical banner 1`] = `
<div>
  <div>
    Canonical Cookie banner
  </div>
</div>
`;
